// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<AccordionItem
  isOpen={false}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;

exports[`Snapshot match 2`] = `
<AccordionItem
  isOpen={true}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;
